fix alignement footer  css

--- a/_sass/my-inline.scss
+++ b/_sass/my-inline.scss
@@ -47,7 +47,7 @@ audio {
   margin-bottom: 1rem;
 }
 
-p{
+article{
   text-align: justify;
 }
 .styles__waveform___3PY0T{
