--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -66,4 +66,7 @@ a.nav-btn:hover, button.nav-btn:hover {
 h1, h2, h3, .h1, .h2, .h3 {
     margin: 2rem 0 1rem;
 }
+footer {
+    text-align: center;
+}
 
